--- a/src/Components/Gallery.css
+++ b/src/Components/Gallery.css
@@ -59,6 +59,16 @@ main {
     max-width: 100%;
   }
 
+  .largeImageWrap {
+    overflow: hidden;
+    background-color: #f6f5f0;
+    display: flex;
+    justify-content: center;
+    margin-top: 80px;
+    padding-top: 100px;
+    z-index: 9;
+  }
+
   .fullScreenImage img {
     margin-top: -40px;
     max-height: 100%;
@@ -68,4 +78,8 @@ main {
   margin: 200px 10px;
 }
 h2 {
+  font-family: "andale mono";
+  text-transform: uppercase;
+  font-size: 30px;
+  color: #434141;
 }
